Reduce nondeterminism in PriorityQueues
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/branches/abstraction-with-block-summaries@43623 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c