@@ -8,14 +8,10 @@
 
 package org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange;
 
-import com.google.common.base.Preconditions;
-import com.google.common.collect.ImmutableMap;
-import com.google.common.collect.ImmutableSet;
-import com.google.common.collect.Sets;
 import com.google.common.util.concurrent.ForwardingBlockingQueue;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Objects;
+import java.util.LinkedHashMap;
+import java.util.LinkedList;
+import java.util.Map;
 import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
 import org.sosy_lab.cpachecker.core.algorithm.distributed_summaries.exchange.actor_messages.BlockSummaryMessage;
@@ -25,35 +21,11 @@ public class BlockSummaryStrategyPriorityQueue
     extends ForwardingBlockingQueue<BlockSummaryMessage> {
 
   private final BlockingQueue<BlockSummaryMessage> queue;
-  private final List<BlockSummaryMessage> reordered;
-  private final ImmutableMap<MessageType, ReorderStrategy> reordering;
+  private final int TAKE_POSTCONDITION = 4;
+  private int current = 0;
 
-  @FunctionalInterface
-  interface ReorderStrategy {
-    boolean reorder();
-  }
-
-  private static class CountReorderStrategy implements ReorderStrategy {
-
-    private int count;
-    private final int max;
-    private final int yes;
-
-    public CountReorderStrategy(int pNo, int pYes) {
-      Preconditions.checkArgument(pNo >= 0);
-      Preconditions.checkArgument(pYes >= 0);
-      Preconditions.checkArgument(pYes > 0 || pNo > 0);
-      max = pYes + pNo;
-      yes = pYes;
-    }
-
-    @Override
-    public boolean reorder() {
-      boolean reorder = count < yes;
-      count = (count + 1) % max;
-      return reorder;
-    }
-  }
+  private final LinkedList<BlockSummaryMessage> highestPriority;
+  private final Map<MessageType, LinkedList<BlockSummaryMessage>> next;
 
   /**
    * Mimics a blocking queue but changes the blocking method <code>take</code> to prioritize
@@ -63,23 +35,10 @@ public class BlockSummaryStrategyPriorityQueue
    */
   private BlockSummaryStrategyPriorityQueue(BlockingQueue<BlockSummaryMessage> pQueue) {
     queue = pQueue;
-    reordered = new ArrayList<>();
-    // necessary to avoid endless loops of ErrorCondition messages for loop structures.
-    // the number is the probability within [0;1) that the messages will be processed next
-    reordering =
-        ImmutableMap.<MessageType, ReorderStrategy>builder()
-            .put(MessageType.STATISTICS, () -> true)
-            .put(MessageType.ERROR, () -> true)
-            .put(MessageType.FOUND_RESULT, () -> true)
-            .put(MessageType.ERROR_CONDITION_UNREACHABLE, () -> true)
-            .put(MessageType.ERROR_CONDITION, new CountReorderStrategy(1, 3))
-            .put(MessageType.BLOCK_POSTCONDITION, new CountReorderStrategy(1, 1))
-            .buildKeepingLast();
-    if (reordering.size() != MessageType.values().length) {
-      throw new AssertionError(
-          "Forgot to add a missing message type to reorder map"
-              + Sets.difference(ImmutableSet.copyOf(MessageType.values()), reordering.keySet()));
-    }
+    highestPriority = new LinkedList<>();
+    next = new LinkedHashMap<>();
+    next.put(MessageType.ERROR_CONDITION, new LinkedList<>());
+    next.put(MessageType.BLOCK_POSTCONDITION, new LinkedList<>());
   }
 
   public BlockSummaryStrategyPriorityQueue() {
@@ -102,15 +61,29 @@ public class BlockSummaryStrategyPriorityQueue
     // empty pending messages (non blocking)
     while (!queue.isEmpty()) {
       BlockSummaryMessage message = queue.take();
-      if (Objects.requireNonNull(reordering.getOrDefault(message.getType(), () -> true))
-          .reorder()) {
-        reordered.add(0, message);
-      } else {
-        reordered.add(message);
+      switch (message.getType()) {
+        case STATISTICS, FOUND_RESULT, ERROR, ERROR_CONDITION_UNREACHABLE -> highestPriority.add(
+            message);
+        case ERROR_CONDITION, BLOCK_POSTCONDITION -> {
+          next.get(message.getType()).add(message);
+        }
       }
     }
-    if (!reordered.isEmpty()) {
-      return reordered.remove(0);
+    if (!highestPriority.isEmpty()) {
+      return highestPriority.removeFirst();
+    }
+    LinkedList<BlockSummaryMessage> errorConditions = next.get(MessageType.ERROR_CONDITION);
+    LinkedList<BlockSummaryMessage> postConditions = next.get(MessageType.BLOCK_POSTCONDITION);
+    if (!errorConditions.isEmpty()) {
+      if (current >= TAKE_POSTCONDITION && !postConditions.isEmpty()) {
+        current = 0;
+        return postConditions.removeFirst();
+      } else {
+        current++;
+        return errorConditions.removeFirst();
+      }
+    } else if (!postConditions.isEmpty()) {
+      return postConditions.removeFirst();
     }
     return queue.take();
   }
